src/agent/snapshots/kwaak__agent__tool_summarizer__test__prompt_render_where_tool_output_has_jinja.snap
---
source: src/agent/tool_summarizer.rs
expression: rendered_prompt.render().await.unwrap()
---
# Goal

A coding agent has made a tool call. It is your job to refine the output.

Reformat the following tool output such that it is effective for an AI agent to work with. Only include the reformatted output in your response.
Reformat but do not summarize, all information should be preserved and detailed.

##

Tool name: search_file
Tool description: Searches for a file inside the current project, leave the argument empty to list all files. Uses `find`.
Tool was called with arguments: {"query":"some_file_with_jinja"}



## Tool output

````shell
Result with Jinja syntax: {{ some_variable }}
````

## Format

- Only include the reformatted output in your response and nothing else.
- Include clear instructions on how to fix each issue using the tools that are
  available only.
- If you do not have a clear solution, state that you do not have a clear solution.
- If there is any mangling in the tool response, reformat it to be readable.


## Available tools

- **search_file**: Searches for a file inside the current project, leave the argument empty to list all files. Uses `find`.

## Requirements

- Only propose improvements that can be fixed by the tools and functions that are
  available in the conversation. For instance, running a command to fix linting can also be fixed by writing to that file without errors.
- If the tool output has repeating patterns, only include the pattern once and state
  that it happens multiple times.
- You cannot call tools yourself. You can only propose changes that can be made by
  the agent.
