src/agent/snapshots/kwaak__agent__tool_summarizer__test__prompt_rendering.snap
---
source: src/agent/tool_summarizer.rs
expression: rendered_prompt.render().await.unwrap()
---
# Goal
A coding agent has made a tool call. It is your job to refine the output.

Reformat the following tool output such that it is effective for a chatgpt agent to work with. Only include the reformatted output in your response.
Reformat but do not summarize, all information should be preserved and detailed.

## 
Tool name: search_file
Tool description: Searches for a file inside the current project, leave the argument empty to list all files. Uses `find`.
Tool was called with arguments: {"query":"some_file"}



## The agent has made the following changes
````
diff --git a/some_file b/some_file
index 0000000..1111111 100644
--- a/some_file
+++ b/some_file
@@ -1,1 +1,1 @@
-old
+new
    
````


## Tool output
```
Found it!
```

## Format
* Only include the reformatted output in your response and nothing else.
* Include clear instructions on how to fix each issue using the tools that are
  available only.
* If you do not have a clear solution, state that you do not have a clear solution.
* If there is any mangling in the tool response, reformat it to be readable.
* If you suspect that any changes made by the agent affect the tool output, mention
    that. Make sure you include full paths to the files.
## Available tools
- **search_file**: Searches for a file inside the current project, leave the argument empty to list all files. Uses `find`.

## Requirements
* Only propose improvements that can be fixed by the tools and functions that are
    available in the conversation. For instance, running a command to fix linting can also be fixed by writing to that file without errors.
* If the tool output has repeating patterns, only include the pattern once and state
 that it happens multiple times.
